# mashgraph2

./: .gitignore  CMakeLists.txt  Doxyfile  readme.txt  run&compare.sh
doc/html/: Usable_8cpp.html  Usable_8cpp.js  Usable_8cpp__incl.map  Usable_8cpp__incl.md5  Usable_8h.html  Usable_8h.js  Usable_8h__dep__incl.map  Usable_8h__dep__incl.md5  Usable_8h__incl.map  Usable_8h__incl.md5  Usable_8h_source.html  annotated.html  annotated_dup.js  classConvolutionOp-members.html  classConvolutionOp.html  classConvolutionOp.js  classMatrix-members.html  classMatrix.html  classMatrix.js  classTClassifier-members.html  classTClassifier.html  classTClassifier.js  classTModel-members.html  classTModel.html  classTModel.js  classTimer-members.html  classTimer.html  classTimer.js  classes.html  classifier_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  (+13 more)
doc/html/search/: all_0.js  all_2.js  all_5.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
include/: Usable.h
src/: CMakeLists.txt  Usable.cpp  Usable.h  task2.cpp
